[project]
name = "echoclip"
version = "0.1.0"
description = "EchoCLIP: multimodal echocardiography model examples"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "open-clip-torch>=2.24",
    "huggingface-hub>=0.20",
    "tokenizers>=0.15",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "Pillow>=10.1",
    "scipy>=1.12",
    "timm>=0.9.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
