[project]
name = "echoclip"
version = "0.1.0"
description = "EchoCLIP: multimodal echocardiography model examples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "open-clip-torch>=2.24",
    "huggingface-hub>=0.20",
    "tokenizers>=0.15",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "Pillow>=10.1",
    "scipy>=1.12",
    "timm>=0.9.12",
]

# -----------------------------
# PyTorch variants
# -----------------------------

[project.optional-dependencies]
cpu = [
    "torch>=2.1",
    "torchvision>=0.16",
]

cuda118 = [
    "torch==2.1.0",
    "torchvision==0.16.0",
]

cuda121 = [
    "torch==2.2.2",
    "torchvision==0.17.2",
]

dev = [
    "pytest",
    "pytest-timeout",
    "pytest-xdist",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# -----------------------------
# uv configuration
# -----------------------------

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda118" },
        { extra = "cuda121" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", extra = "cuda118" },
    { index = "pytorch-cu121", extra = "cuda121" },
]

torchvision = [
    { index = "pytorch-cu118", extra = "cuda118" },
    { index = "pytorch-cu121", extra = "cuda121" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true